--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,7 +1,7 @@
 source 'https://gitlab.ysjzb.net/mobile/iOS/Specs.git'
 
 platform :ios, "10.0"
-use_frameworks! :linkage => :static
+use_frameworks!# :linkage => :static
 
 target 'CryptoSwift_Example' do
   pod 'CryptoSwift', :path => '../'
